Fix not visible img_preview_btns after Google images redesign

--- a/css/content_script.css
+++ b/css/content_script.css
@@ -163,7 +163,7 @@ html[dir="rtl"] .scroll_to_top_btn_pipbbdfondfipmjmdkmggihiknhmcfhd {
 .img_preview_btns_wrapper_pipbbdfondfipmjmdkmggihiknhmcfhd {
     position: absolute;
     right: 0;
-    z-index: 1;
+	z-index: 214748367;
     direction: ltr;
     white-space: nowrap;
 }
